change 'проекти' to 'проєкти'

--- a/about-us.html
+++ b/about-us.html
@@ -31,7 +31,7 @@
                         </div>
                         <nav class="menu__body">
                             <ul class="menu__list" >
-                                <li> <a href="all-projects" class="__hover"> Проекти </a> </li>
+                                <li> <a href="all-projects" class="__hover"> Проєкти </a> </li>
                                 <li> <a href="about-us" class="projects-link __hover"> Про нас </a> </li>
                                 <li> <a href="contacts" class="__hover"> Контакти </a> </li>
                                 <li> <a href="en/about-us" class="__hover"> En </a> </li>
@@ -99,7 +99,7 @@
                             <div class="par-group">
                                 <p class="par"> Ми - українська архітектурна компанія <span> "Архітектурно-проектна група Анни Кирій" </span> з Києва. Наша компанія була заснована в 2008 році. </p>
                                 <p class="par"> Ми маємо понад 14 років досвіду в архітектурному проектуванні повного циклу. Ми працюємо з реальним сектором, комерційними компаніями, фондами, міжнародними, муніципальними та державними організаціями в якості Генерального проектувальника та створюємо для наших клієнтів усі види проектної документації. У своїх архітектурних рішеннях наша компанія керується принципами сучасної архітектури. Наша команда завжди знаходить і пропонує найкраще рішення, яке покращує бізнес наших клієнтів і вирішує їх бізнес-завдання. </p>
-                                <p class="par"> <span>Наша глобальна мета – робити проекти, які розбудовують Україну.</span> Наша місія – відкрита до світу Україна, яка може пишатися естетикою свого простору та сучасними проривними рішеннями в архітектурі. </p>
+                                <p class="par"> <span>Наша глобальна мета – робити проєкти, які розбудовують Україну.</span> Наша місія – відкрита до світу Україна, яка може пишатися естетикою свого простору та сучасними проривними рішеннями в архітектурі. </p>
                             </div> 
                             <div class="par-group">
                                 <p class="par"><span> Компанія спеціалізується </span> на розробці наступних видів робіт:</p>
@@ -119,7 +119,7 @@
                             </div>                            
                             <div class="par-group">
                                 <p class="par"><span>Команда</span></p>
-                                <p class="par"> Всі співробітники компанії - талановиті особистості та висококваліфіковані фахівці своєї справи. Це архітектори з кваліфікаційними сертифікатами, дизайнери та менеджери. Компанія тісно співпрацює з фахівцями та організаціями інженерних спеціальностей, залучаючи їх до розробки проектної документації в якості субпідрядників. Ми пишаємося командою, яка здатна створювати та реалізовувати масштабні та важливі для України проекти.</p>
+                                <p class="par"> Всі співробітники компанії - талановиті особистості та висококваліфіковані фахівці своєї справи. Це архітектори з кваліфікаційними сертифікатами, дизайнери та менеджери. Компанія тісно співпрацює з фахівцями та організаціями інженерних спеціальностей, залучаючи їх до розробки проектної документації в якості субпідрядників. Ми пишаємося командою, яка здатна створювати та реалізовувати масштабні та важливі для України проєкти.</p>
                             </div>
                         </div>
                     </div>
