--- a/all-projects.html
+++ b/all-projects.html
@@ -31,7 +31,7 @@
                         </div>
                         <nav class="menu__body">
                             <ul class="menu__list" >
-                                <li> <a href="all-projects" class="projects-link __hover"> Проекти </a> </li>
+                                <li> <a href="all-projects" class="projects-link __hover"> Проєкти </a> </li>
                                 <li> <a href="about-us" class="__hover"> Про нас </a> </li>
                                 <li> <a href="contacts" class="__hover"> Контакти </a> </li>
                                 <li> <a href="en/all-projects" class="__hover"> En </a> </li>
@@ -75,11 +75,11 @@
                                     <path d="M224 416c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L224 338.8l169.4-169.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-192 192C240.4 412.9 232.2 416 224 416z"/>
                                 </svg>
                             </span>
-                            <span class="arrow-text"> Всі проекти  </span>
+                            <span class="arrow-text"> Всі проєкти  </span>
                         </div>
                         <nav class=" filter__navigation">
                             <ul class="filter__navigation-list">
-                                <li data-filter="all projects" class="filter__btn filter__all"> Всі проекти </li> <span></span>
+                                <li data-filter="all projects" class="filter__btn filter__all"> Всі проєкти </li> <span></span>
                                 <li data-filter="education" class="filter__btn filter__education"> Освіта </li> <span></span>
                                 <li data-filter="public" class="filter__btn filter__public"> Громадські </li> <span></span>
                                 <li data-filter="housing" class="filter__btn filter__housing"> Житло </li> <span></span>
