--- a/project/kyiv-medical-university.html
+++ b/project/kyiv-medical-university.html
@@ -61,7 +61,7 @@
               <nav class="menu__body">
                 <ul class="menu__list">
                   <li>
-                    <a href="../all-projects" class="__hover"> Проекти </a>
+                    <a href="../all-projects" class="__hover"> Проєкти </a>
                   </li>
                   <li><a href="../about-us" class="__hover"> Про нас </a></li>
                   <li><a href="../contacts" class="__hover"> Контакти </a></li>
