--- a/project/nszu.html
+++ b/project/nszu.html
@@ -33,7 +33,7 @@
                         </div>
                         <nav class="menu__body">
                             <ul class="menu__list" >
-                                <li> <a href="../all-projects" class="__hover"> Проекти </a> </li>
+                                <li> <a href="../all-projects" class="__hover"> Проєкти </a> </li>
                                 <li> <a href="../about-us" class="__hover"> Про нас </a> </li>
                                 <li> <a href="../contacts" class="__hover"> Контакти </a> </li>
                                 <li> <a href="../en/project/nszu" class="__hover"> En </a> </li>
