--- a/all-projects.html
+++ b/all-projects.html
@@ -22,8 +22,8 @@
             <div class="page__container">
                 <div class="page__nav-bar">
                     <div class="header__logo">
-                        <a href="https://tetiana-kozak.github.io/APG_Kyrii/" class="header_logo-pic"><img src="assets/pic/00_general/logo_black.svg" class="header_logo-pic" alt="Anna Kyrii"></a>
-                        <a href="https://tetiana-kozak.github.io/APG_Kyrii/" class="header_name"><h1 class="header_name-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1></a>
+                        <a href="https://www.kyrii-group.com.ua/" class="header_logo-pic"><img src="assets/pic/00_general/logo_black.svg" class="header_logo-pic" alt="Anna Kyrii"></a>
+                        <a href="https://www.kyrii-group.com.ua/" class="header_name"><h1 class="header_name-text"> Anna Kyrii <br> Architectural <br> Projecting Group</h1></a>
                     </div>
                     <div class="header__menu menu">
                         <div class="menu__icon">
