--- a/about-us.html
+++ b/about-us.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <meta name="description" content="Архітектурно проектна група Анни Кирій">
+    <meta name="description" content="Архітектурно проктна група Анни Кирій">
     <meta name="keywords" content="архітектура, архітектурний проект, Анна Кирій, архітектор, архітектурна група">
     <meta name="author" content="Архітектурно проектна група Анни Кирій">
     <link rel="stylesheet" href="assets/style/normalize.css">
@@ -80,7 +80,7 @@
                             </div>
                             <div class="achievements__block">
                                 <p class="number"> 260 </p>
-                                <p class="text">Проектів</p>
+                                <p class="text">Проєктів</p>
                             </div>
                             <div class="achievements__block">
                                 <p class="number"> 14 </p>
@@ -97,21 +97,21 @@
                     <div class="section-wrapper info" >
                         <div class="info__paragraphs">
                             <div class="par-group">
-                                <p class="par"> Ми - українська архітектурна компанія <span> "Архітектурно-проектна група Анни Кирій" </span> з Києва. Наша компанія була заснована в 2008 році. </p>
-                                <p class="par"> Ми маємо понад 14 років досвіду в архітектурному проектуванні повного циклу. Ми працюємо з реальним сектором, комерційними компаніями, фондами, міжнародними, муніципальними та державними організаціями в якості Генерального проектувальника та створюємо для наших клієнтів усі види проектної документації. У своїх архітектурних рішеннях наша компанія керується принципами сучасної архітектури. Наша команда завжди знаходить і пропонує найкраще рішення, яке покращує бізнес наших клієнтів і вирішує їх бізнес-завдання. </p>
+                                <p class="par"> Ми - українська архітектурна компанія <span> "Архітектурно-проєктна група Анни Кирій" </span> з Києва. Наша компанія була заснована в 2008 році. </p>
+                                <p class="par"> Ми маємо понад 14 років досвіду в архітектурному проєктуванні повного циклу. Ми працюємо з реальним сектором, комерційними компаніями, фондами, міжнародними, муніципальними та державними організаціями в якості Генерального проєктувальника та створюємо для наших клієнтів усі види проєктної документації. У своїх архітектурних рішеннях наша компанія керується принципами сучасної архітектури. Наша команда завжди знаходить і пропонує найкраще рішення, яке покращує бізнес наших клієнтів і вирішує їх бізнес-завдання. </p>
                                 <p class="par"> <span>Наша глобальна мета – робити проєкти, які розбудовують Україну.</span> Наша місія – відкрита до світу Україна, яка може пишатися естетикою свого простору та сучасними проривними рішеннями в архітектурі. </p>
                             </div> 
                             <div class="par-group">
                                 <p class="par"><span> Компанія спеціалізується </span> на розробці наступних видів робіт:</p>
-                                <p class="par"> - консультації з будь-яких питань, пов'язаних з процесом проектування та розробки об'єктів архітектури;</p>
+                                <p class="par"> - консультації з будь-яких питань, пов'язаних з процесом проєктування та розробки об'єктів архітектури;</p>
                                 <p class="par"> - розробка концепцій з аналізом граничних параметрів будівлі та карти ризиків; </p>
                                 <p class="par"> - пошук найкращих архітектурних та інженерних рішень поставленого завдання;</p>
-                                <p class="par"> - створення проектної документації: Передпроект, Ескізний Проект, Проект, Робочий Проект та Робоча Документація;</p>
+                                <p class="par"> - створення проєктної документації: Передпроєкт, Ескізний Проєкт, Проєкт, Робочий Проєкт та Робоча Документація;</p>
                                 <p class="par"> - авторський нагляд за будівництвом.</p>
                                 <p class="par"> Наша головна майстерність - створювати об'єкти від ідеї до реалізації</p>
                             </div>
                             <div class="par-group">
-                                <p class="par"> <span> Перелік проектів, розроблених нашою компанією, переважає понад 260 </span> у таких категоріях: громадські будівлі, житло, офісні будівлі та бізнес-центри, багатофункціональні комплекси, охорона здоров'я, школи, дитячі садки, центри дозвілля, котеджні містечка, інтер'єри громадських просторів</p>
+                                <p class="par"> <span> Перелік проєктів, розроблених нашою компанією, переважає понад 260 </span> у таких категоріях: громадські будівлі, житло, офісні будівлі та бізнес-центри, багатофункціональні комплекси, охорона здоров'я, школи, дитячі садки, центри дозвілля, котеджні містечка, інтер'єри громадських просторів</p>
                             </div>
                             <div class="par-group">
                                 <p class="par"><span> Що ми не робимо </span></p>
@@ -119,7 +119,7 @@
                             </div>                            
                             <div class="par-group">
                                 <p class="par"><span>Команда</span></p>
-                                <p class="par"> Всі співробітники компанії - талановиті особистості та висококваліфіковані фахівці своєї справи. Це архітектори з кваліфікаційними сертифікатами, дизайнери та менеджери. Компанія тісно співпрацює з фахівцями та організаціями інженерних спеціальностей, залучаючи їх до розробки проектної документації в якості субпідрядників. Ми пишаємося командою, яка здатна створювати та реалізовувати масштабні та важливі для України проєкти.</p>
+                                <p class="par"> Всі співробітники компанії - талановиті особистості та висококваліфіковані фахівці своєї справи. Це архітектори з кваліфікаційними сертифікатами, дизайнери та менеджери. Компанія тісно співпрацює з фахівцями та організаціями інженерних спеціальностей, залучаючи їх до розробки проєктної документації в якості субпідрядників. Ми пишаємося командою, яка здатна створювати та реалізовувати масштабні та важливі для України проєкти.</p>
                             </div>
                         </div>
                     </div>
@@ -178,33 +178,33 @@
                                 <p class="awards__title-year">2021</p>
                                 <div class="years-wrapper">
                                     <div class="awards__block __first">
-                                        <p class="awards__name"> Проект року Fundermax 6.0 2021 </p>
-                                        <p class="award"> Назва проекту: Центр водного дозвілля, Мукачево, Закарпатська обл, Україна </p>
-                                        <p class="award"> Номінація: Проект року </p>
+                                        <p class="awards__name"> Проєкт року Fundermax 6.0 2021 </p>
+                                        <p class="award"> Назва проєкту: Центр водного дозвілля, Мукачево, Закарпатська обл, Україна </p>
+                                        <p class="award"> Номінація: Проєкт року </p>
                                         <p class="award"> Нагорода: Гран-прі екстер'єр </p>
                                     </div>
                                     <div class="awards__block">
                                         <p class="awards__name"> Всеукраїнський огляд-конкурс "Премія Національної спілки архітекторів України 2021" </p>
-                                        <p class="award"> Назва проекту: Центр надання адміністративних послуг, Нова Каховка, Херсонська обл, Україна </p>
+                                        <p class="award"> Назва проєкту: Центр надання адміністративних послуг, Нова Каховка, Херсонська обл, Україна </p>
                                         <p class="award"> Номінація: Будівлі, комплекси, споруди (реалізація) </p>
                                         <p class="award"> Нагорода: Гран-прі за досягнення в архітектурі</p>
                                     </div>
                                     <div class="awards__block">
                                         <p class="awards__name"> Всеукраїнський огляд-конкурс "Премія Національної спілки архітекторів України 2021" </p>
-                                        <p class="award"> Назва проекту: Центр водного дозвілля, Мукачево, Закарпатська обл, Україна </p>
+                                        <p class="award"> Назва проєкту: Центр водного дозвілля, Мукачево, Закарпатська обл, Україна </p>
                                         <p class="award"> Номінація: Будівлі, комплекси, споруди (реалізація) </p>
                                         <p class="award"> Нагорода: Диплом лауреата </p>
                                     </div>
                                     <div class="awards__block">
                                         <p class="awards__name"> Всеукраїнський огляд-конкурс "Премія Національної спілки архітекторів України 2021" </p>
-                                        <p class="award"> Назва проекту: Національна служба здоров'я України, Київ, Україна </p>
+                                        <p class="award"> Назва проєкту: Національна служба здоров'я України, Київ, Україна </p>
                                         <p class="award"> Номінація: Будівлі, комплекси, споруди (реалізація) </p>
                                         <p class="award"> Нагорода: Диплом лауреата </p>
                                     </div>
                                     <div class="awards__block">
                                         <p class="awards__name"> Всеукраїнський огляд-конкурс "Премія Національної спілки архітекторів України 2021" </p>
-                                        <p class="award"> Назва проекту: Реконструкція нежитлових будівель під адміністративно-виробничий комплекс, Київ, Україна </p>
-                                        <p class="award"> Номінація: Будівлі, комплекси, споруди (проект) </p>
+                                        <p class="award"> Назва проєкту: Реконструкція нежитлових будівель під адміністративно-виробничий комплекс, Київ, Україна </p>
+                                        <p class="award"> Номінація: Будівлі, комплекси, споруди (проєкт) </p>
                                         <p class="award"> Нагорода: Диплом лауреата </p>
                                     </div>
                                 </div>
@@ -212,8 +212,8 @@
                                 <div class="years-wrapper">                                    
                                     <div class="awards__block">
                                         <p class="awards__name"> Всеукраїнський огляд-конкурс "Премія Національної спілки архітекторів України 2020" </p>
-                                        <p class="award"> Назва проекту: Центр водного дозвілля, Мукачево, Закарпатська обл, Україна </p>
-                                        <p class="award"> Номінація: Будівлі, комплекси, споруди (проект) </p>
+                                        <p class="award"> Назва проєкту: Центр водного дозвілля, Мукачево, Закарпатська обл, Україна </p>
+                                        <p class="award"> Номінація: Будівлі, комплекси, споруди (проєкт) </p>
                                         <p class="award"> Нагорода: Диплом лауреата </p>
                                     </div>
                                     <div class="awards__block">
@@ -227,7 +227,7 @@
                                 <div class="years-wrapper">
                                     <div class="awards__block">
                                         <p class="awards__name"> Всеукраїнський огляд-конкурс "Премія Національної спілки архітекторів України 2019" </p>
-                                        <p class="award"> Назва проекту: Офіс на вул. Іллінська, Київ, Україна </p>
+                                        <p class="award"> Назва проєкту: Офіс на вул. Іллінська, Київ, Україна </p>
                                         <p class="award"> Номінація: Інтер'єр </p>
                                         <p class="award"> Нагорода: Диплом лауреата </p>
                                     </div>
@@ -236,37 +236,37 @@
                                 <div class="years-wrapper">
                                     <div class="awards__block">
                                         <p class="awards__name"> Всеукраїнський огляд-конкурс "Премія Національної спілки архітекторів України 2018" </p>
-                                        <p class="award"> Назва проекту: Центр надання адміністративних послуг, Нова Каховка, Херсонська обл, Україна </p>
-                                        <p class="award"> Номінація: Будівлі, комплекси, споруди (проект) </p>
+                                        <p class="award"> Назва проєкту: Центр надання адміністративних послуг, Нова Каховка, Херсонська обл, Україна </p>
+                                        <p class="award"> Номінація: Будівлі, комплекси, споруди (проєкт) </p>
                                         <p class="award"> Нагорода: Диплом лауреата </p>
                                     </div>
                                     <div class="awards__block">
                                         <p class="awards__name"> Всеукраїнський огляд-конкурс "Премія Національної спілки архітекторів України 2018" </p>
-                                        <p class="award"> Назва проекту: Дитячий садочок "Зірочка" Бровари, Київська обл, Україна </p>
-                                        <p class="award"> Номінація: Будівлі, комплекси, споруди (проект) </p>
+                                        <p class="award"> Назва проєкту: Дитячий садочок "Зірочка" Бровари, Київська обл, Україна </p>
+                                        <p class="award"> Номінація: Будівлі, комплекси, споруди (проєкт) </p>
                                         <p class="award"> Нагорода: Диплом лауреата </p>
                                     </div>
                                     <div class="awards__block">
                                         <p class="awards__name"> Всеукраїнський огляд-конкурс "Премія Національної спілки архітекторів України 2018" </p>
-                                        <p class="award"> Назва проекту: Житловий будинок на вул. Черкаська, Київ, Україна </p>
+                                        <p class="award"> Назва проєкту: Житловий будинок на вул. Черкаська, Київ, Україна </p>
                                         <p class="award"> Номінація: Багатоповерхові житлові будівлі </p>
                                         <p class="award"> Нагорода: Призер </p>
                                     </div>
                                     <div class="awards__block">
                                         <p class="awards__name"> Ukrainian Urban Awards "Інтер'єр року 2018" </p>
-                                        <p class="award"> Назва проекту: Інтер'єр офісу "Smart Group", Київ, Україна</p>
+                                        <p class="award"> Назва проєкту: Інтер'єр офісу "Smart Group", Київ, Україна</p>
                                         <p class="award"> Номінація: Інтер'єр суспільно-адміністративних будівель </p>
                                         <p class="award"> Нагорода: Друге місце </p>
                                     </div>
                                     <div class="awards__block">
                                         <p class="awards__name"> Всеукраїнський конкурс-огляд "Reset City-2018" </p>
-                                        <p class="award"> Назва проекту: Молодша школа в Броварах, Київська обл, Україна </p>
+                                        <p class="award"> Назва проєкту: Молодша школа в Броварах, Київська обл, Україна </p>
                                         <p class="award"> Номінація: Реновація </p>
                                         <p class="award"> Нагорода: Призер </p>
                                     </div>
                                     <div class="awards__block">
-                                        <p class="awards__name">Національний форум з управління будівельними проектами "Атланти будівництва Red PM Day 2018" </p>
-                                        <p class="award"> Номінація: Найефективніша команда проекту </p>
+                                        <p class="awards__name">Національний форум з управління будівельними проєктами "Атланти будівництва Red PM Day 2018" </p>
+                                        <p class="award"> Номінація: Найефективніша команда проєкту </p>
                                         <p class="award"> Нагорода: Призер </p>
                                     </div>                                    
                                 </div>
@@ -274,19 +274,19 @@
                                 <div class="years-wrapper">
                                     <div class="awards__block">
                                         <p class="awards__name"> Всеукраїнський огляд-конкурс "Премія Національної спілки архітекторів України 2017" </p>
-                                        <p class="award"> Назва проекту: Інтер'єр лекторію, Київ, Україна </p>
+                                        <p class="award"> Назва проєкту: Інтер'єр лекторію, Київ, Україна </p>
                                         <p class="award"> Номінація: Громадські приміщення </p>
                                         <p class="award"> Нагорода: Інтер'YEAR 3 премія </p>
                                     </div>
                                     <div class="awards__block">
                                         <p class="awards__name"> Всеукраїнський огляд-конкурс "Премія Національної спілки архітекторів України 2017" </p>
-                                        <p class="award"> Назва проекту: Інтер'єр магазину "Фуршет", Київ, Україна </p>
+                                        <p class="award"> Назва проєкту: Інтер'єр магазину "Фуршет", Київ, Україна </p>
                                         <p class="award"> Номінація: Торгові приміщення </p>
                                         <p class="award"> Нагорода: Інтер'YEAR 2 премія </p>
                                     </div>
                                     <div class="awards__block">
                                         <p class="awards__name"> Всеукраїнський огляд-конкурс "Премія Національної спілки архітекторів України 2017" </p>
-                                        <p class="award"> Назва проекту: Інтер'єр лекторію, Київ, Україна </p>
+                                        <p class="award"> Назва проєкту: Інтер'єр лекторію, Київ, Україна </p>
                                         <p class="award"> Номінація: Інтер'єри адміністративних будівель </p>
                                         <p class="award"> Нагорода: Приз архітектора В'ячеслава Морского за досягнення в архітектурі в стилі Модернізм </p>
                                     </div>                                    
