--- a/contacts.html
+++ b/contacts.html
@@ -75,19 +75,19 @@
                             <div class="contacts__what-we-do">
                                 <div class="contacts__what-we-do-text">
                                     <p class="main-text"> Консультація з будь-яких питань </p>
-                                    <p class="additional-text">пов'язані з процесом проектування та розробки об'єктів архітектури </p>
+                                    <p class="additional-text">пов'язані з процесом проєктування та розробки об'єктів архітектури </p>
                                 </div>
                                 <div class="contacts__what-we-do-text">
                                     <p class="main-text"> Розробка концепцій </p>
                                     <p class="additional-text"> з аналізом граничних параметрів забудови та карти ризиків </p>
                                 </div>
                                 <div class="contacts__what-we-do-text">
-                                    <p class="main-text"> Проектна документація </p>
+                                    <p class="main-text"> Проєктна документація </p>
                                     <p class="additional-text"> Пошук найкращих архітектурних та інженерних рішень для поставленого завдання </p>
                                 </div>
                                 <div class="contacts__what-we-do-text">
-                                    <p class="main-text"> Проектна документація </p>
-                                    <p class="additional-text"> Передпроектні Пропозиції, Ескізний Проект, Робочий Проект та Робоча Документація </p>
+                                    <p class="main-text"> Проєктна документація </p>
+                                    <p class="additional-text"> Передпроєктні Пропозиції, Ескізний Проєкт, Робочий Проєкт та Робоча Документація </p>
                                 </div>
                                 <div class="contacts__what-we-do-text">
                                     <p class="main-text"> Авторський нагляд за будівництвом </p>
