--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                             </div>
                         </div>
                         <div class="project__more-projects more-btn">
-                            <a href="all-projects" class="more-btn-text"> Більше проектів </a>
+                            <a href="all-projects" class="more-btn-text"> Більше проєктів </a>
                         </div>
                     </div>
                 </div>
@@ -169,7 +169,7 @@
                                     </div>
                                     <div class="achievements__block">
                                         <p class="number"> 260 
-                                        <p class="text">Проектів
+                                        <p class="text">Проєктів
                                     </div>
                                     <div class="achievements__block">
                                         <p class="number"> 14 
@@ -235,19 +235,19 @@
                             <div class="contacts__what-we-do">
                                 <div class="contacts__what-we-do-text">
                                     <p class="main-text"> Консультація з будь-яких питань 
-                                    <p class="additional-text"> пов'язані з процесом проектування та розробки об'єктів архітектури 
+                                    <p class="additional-text"> пов'язані з процесом проєктування та розробки об'єктів архітектури 
                                 </div>
                                 <div class="contacts__what-we-do-text">
                                     <p class="main-text"> Розробка концепцій 
                                     <p class="additional-text"> з аналізом граничних параметрів забудови та карти ризиків 
                                 </div>
                                 <div class="contacts__what-we-do-text">
-                                    <p class="main-text"> Проектна документація 
+                                    <p class="main-text"> Проєктна документація 
                                     <p class="additional-text"> Пошук найкращих архітектурних та інженерних рішень для поставленого завдання
                                 </div>
                                 <div class="contacts__what-we-do-text">
-                                    <p class="main-text"> Проектна документація 
-                                    <p class="additional-text"> Передпроектні Пропозиції, Ескізний Проект, Робочий Проект та Робоча Документація
+                                    <p class="main-text"> Проєктна документація 
+                                    <p class="additional-text"> Передпроєктні Пропозиції, Ескізний Проєкт, Робочий Проєкт та Робоча Документація
                                 </div>
                                 <div class="contacts__what-we-do-text">
                                     <p class="main-text"> Авторський нагляд за будівництвом
