fix sviatopetrivske photoes

--- a/project/sviatopetrivske.html
+++ b/project/sviatopetrivske.html
@@ -100,7 +100,7 @@
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
-                                        <img src="../assets/pic/31_sviatopetrivske/slider/31_06.jpg" alt="" >
+                                        <img src="../assets/pic/31_sviatopetrivske/slider/31_06.png" alt="" >
                                     </div>                                
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
@@ -111,6 +111,11 @@
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
                                         <img src="../assets/pic/31_sviatopetrivske/slider/31_08.jpg" alt="" >
+                                    </div>                                
+                                </div>
+                                <div class="image-slider__slide swiper-slide">
+                                    <div class="image-slider__image">
+                                        <img src="../assets/pic/31_sviatopetrivske/slider/31_09.jpg" alt="" >
                                     </div>                                
                                 </div>
                             </div> 
