fix strumochok slider photoes

--- a/en/project/strumochok.html
+++ b/en/project/strumochok.html
@@ -105,7 +105,7 @@
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
-                                        <img src="../../assets/pic/33_strumochok/slider/33_07.jpg" alt="" >
+                                        <img src="../../assets/pic/33_strumochok/slider/33_07.png" alt="" >
                                     </div>                                
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
@@ -126,6 +126,11 @@
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
                                         <img src="../../assets/pic/33_strumochok/slider/33_11.jpg" alt="" >
+                                    </div>                                
+                                </div>
+                                <div class="image-slider__slide swiper-slide">
+                                    <div class="image-slider__image">
+                                        <img src="../../assets/pic/33_strumochok/slider/33_12.jpg" alt="" >
                                     </div>                                
                                 </div>
                             </div> 
